<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameFragment">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/button_4_5"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_row="5"
            android:layout_column="4" />

        <ImageButton
            android:id="@+id/button_5_5"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_row="5"
            android:layout_column="5" />

        <ImageButton
            android:id="@+id/button_0_0"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_row="0"
            android:layout_column="0" />

        <ImageButton
            android:id="@+id/button_5_4"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_row="4"
            android:layout_column="5" />

        <ImageButton
            android:id="@+id/button_5_2"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_row="2"
            android:layout_column="5" />

        <ImageButton
            android:id="@+id/button_4_4"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_row="4"
            android:layout_column="4" />

        <ImageButton
            android:id="@+id/button_4_3"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_row="3"
            android:layout_column="4" />

        <ImageButton
            android:id="@+id/button_3_5"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_row="5"
            android:layout_column="3" />

        <ImageButton
            android:id="@+id/button_3_4"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_row="4"
            android:layout_column="3" />

        <ImageButton
            android:id="@+id/button_3_3"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_row="3"
            android:layout_column="3" />

        <ImageButton
            android:id="@+id/button_2_4"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_row="4"
            android:layout_column="2" />

        <ImageButton
            android:id="@+id/button_2_5"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_row="5"
            android:layout_column="2" />

        <ImageButton
            android:id="@+id/button_1_5"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_row="5"
            android:layout_column="1" />

        <ImageButton
            android:id="@+id/button_1_4"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_row="4"
            android:layout_column="1" />

        <ImageButton
            android:id="@+id/button_1_3"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_row="3"
            android:layout_column="1" />

        <ImageButton
            android:id="@+id/button_2_3"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_row="3"
            android:layout_column="2" />

        <ImageButton
            android:id="@+id/button_1_2"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_row="2"
            android:layout_column="1" />

        <ImageButton
            android:id="@+id/button_0_3"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_row="3"
            android:layout_column="0" />

        <ImageButton
            android:id="@+id/button_0_4"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_row="4"
            android:layout_column="0" />

        <ImageButton
            android:id="@+id/button_4_2"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_row="2"
            android:layout_column="4" />

        <ImageButton
            android:id="@+id/button_5_3"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_row="3"
            android:layout_column="5" />

        <ImageButton
            android:id="@+id/button_3_2"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_row="2"
            android:layout_column="3" />

        <ImageButton
            android:id="@+id/button_2_2"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_row="2"
            android:layout_column="2" />

        <ImageButton
            android:id="@+id/button_0_2"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_row="2"
            android:layout_column="0" />

        <ImageButton
            android:id="@+id/button_5_1"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_row="1"
            android:layout_column="5" />

        <ImageButton
            android:id="@+id/button_5_0"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_row="0"
            android:layout_column="5" />

        <ImageButton
            android:id="@+id/button_3_1"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_row="1"
            android:layout_column="3" />

        <ImageButton
            android:id="@+id/button_2_1"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_row="1"
            android:layout_column="2" />

        <ImageButton
            android:id="@+id/button_0_1"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_row="1"
            android:layout_column="0" />

        <ImageButton
            android:id="@+id/button_1_1"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_row="1"
            android:layout_column="1" />

        <ImageButton
            android:id="@+id/button_0_5"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_row="5"
            android:layout_column="0" />

        <ImageButton
            android:id="@+id/button_1_0"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_row="0"
            android:layout_column="1" />

        <ImageButton
            android:id="@+id/button_2_0"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_row="0"
            android:layout_column="2" />

        <ImageButton
            android:id="@+id/button_3_0"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_row="0"
            android:layout_column="3" />

        <ImageButton
            android:id="@+id/button_4_0"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_row="0"
            android:layout_column="4" />

        <ImageButton
            android:id="@+id/button_4_1"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_row="1"
            android:layout_column="4" />

    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/statusLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/status" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/player_turn" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/player_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/player_label" />

        <TextView
            android:id="@+id/player_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/enter_name" />

    </LinearLayout>

    <Button
        android:id="@+id/restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/restart" />

</LinearLayout>